--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,7 +55,6 @@ body{
     width: 1020px;
     max-width: 100%;
     margin: 0 auto;
-    border: 1px solid black;
 }
 a{
     text-decoration: none;
@@ -145,3 +144,53 @@ ul#header_account li#new_account a{
 /* ========================================
    main
 ========================================= */
+
+/* 変更ここから */
+div#top_img {
+    margin-top: 30px;
+}
+div#top_img img{
+    width: 1420px;
+    height: 300px;
+}
+/* item */
+div.items{
+     margin-top: 45px;
+}
+div.items h2{
+    font-size: 25px;
+}
+div.items ul{
+    margin-top: 20px;
+    width: 100%;
+    border: 1px solid black;
+    padding-left: 30px;
+}
+div.items ul.main_items li.item{
+    width: 180px;
+    height:250px;
+    background-color: #fff;
+    float: left;
+    margin-right: 22px;
+    margin-bottom: 18px;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+    border-radius: 0.3em;
+}
+div.item_img{
+    height: 190px;
+    width: 100%;
+}
+div.item_info{
+    height: 60px;
+    border-top: 1px solid gray;
+}
+a.item_title{
+    line-height: 60px;
+    color: black;
+    margin-left: 5px;
+    width: 150px;
+    padding: 15px 15px;
+}
+
+
+
