html make footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -192,5 +192,10 @@ a.item_title{
     padding: 15px 15px;
 }
 
+/* ========================================
+   footer
+========================================= */
+
+
 
 
