html make items

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -199,20 +199,31 @@ h2#search_title{
  
 }
 form#select_form{
-    width: 90px;
+    width: 100px;
     margin: 0 auto;
     margin-top: 25px;
 }
 select#order{
-    width: 90px;
+    width: 100px;
     height: 20px;
     margin: 0 auto;
 }
-
+div#search_items ul.main_items{
+    margin-top: 25px;
+}
+ul.main_items li.item{
+    width: 180px;
+    height:250px;
+    background-color: #fff;
+    float: left;
+    margin-right: 22px;
+    margin-bottom: 18px;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+    border-radius: 0.3em;
+}
 /* ========================================
    footer
 ========================================= */
-
 footer{
     height: 150px;
     width: 100%;
