--- a/public/css/style.css
+++ b/public/css/style.css
@@ -221,6 +221,16 @@ ul.main_items li.item{
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
     border-radius: 0.3em;
 }
+
+/* login from */
+div#login_form{
+    width: 360px;
+    height: 600px;
+    margin: 0 auto;
+    background-color: rgb(250, 250, 250);
+    border: 1px solid rgb(175, 175, 175);
+    margin-top: 50px;
+} 
 /* ========================================
    footer
 ========================================= */
