--- a/public/css/style.css
+++ b/public/css/style.css
@@ -370,7 +370,7 @@ p#item_detail_price{
 }
 div#item_detail_business_box{
     width: 280px;
-    margin: 0 auto 20px auto; 
+    margin: 0 auto 50px auto; 
 }
 a#item_detail_business{
     padding: 10px 100px;
@@ -437,18 +437,44 @@ div#item_detail_comment_box{
     min-height: 300px;
     margin: 0 auto 0 auto;
     margin-top: 20px;
-    border: 1px solid black;
+    margin-bottom: 30px;
 }
 h3#item_detail_comment{
     text-align: left;
     font-weight: bold;
     font-size: 15px;
+    padding: 5px 0;
 }
 div#item_comment{
     height: auto;
     width: 100%;
-    border: 1px solid black;
     min-height: 200px;
+    background-color: rgb(245, 245, 245);
+    overflow: scroll;
+}
+
+/* comment form */
+form#item_comment_form{
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+
+}
+
+input#item_comment_text{
+    width: 70%;
+    border: none;
+    font-size: 15px;
+    margin-left: 10px;
+    padding: 10px 0;
+
+}
+input#item_comment_btn{
+    width: 26%;
+    background-color: white;
+    border: 1px solid white;
+    padding: 8px 0;
 }
 /* ========================================
    footer
