--- a/public/css/style.css
+++ b/public/css/style.css
@@ -379,6 +379,13 @@ input#item_detail_business{
     background-color: red;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 }
+input#trade_btn{
+    padding: 10px 100px;
+    color: white;
+    font-size: 18px;
+    background-color: red;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+}
 a#item_message{
     padding: 10px 50px;
     color: white;
@@ -461,7 +468,7 @@ div#item_comment{
     width: 100%;
     min-height: 200px;
     background-color: rgb(245, 245, 245);
-    overflow: scroll;
+    overflow: auto;
 }
 /*  show comment */
 /* ul#commets{
@@ -502,7 +509,7 @@ input#item_comment_text{
 
 }
 input#item_comment_btn{
-    width: 26%;
+    width: 25%;
     background-color: white;
     border: 1px solid white;
     padding: 8px 0;
@@ -528,11 +535,22 @@ p#user_name{
     font-size: 30px;
     text-align: center;
 }
-a#user_create_item{
-    padding: 10px 30px;
+a#user_item_btn{
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
     background-color: red;
+    width: 120px;
+    height: 30px;
+    line-height: 30px;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 ul#user_main_items{
+    margin-top: 10px;
     width: 780px;
     margin: 0 auto;
 }
@@ -563,6 +581,44 @@ div#user_item_edit input,#user_item_delete input{
 #user_item_delete input{
     background-color: red;
 }
+/* direct messages page*/
+div#messages{
+    width: 500px;
+    margin:  0 auto;
+    margin-top: 50px;
+}
+div#message{
+    min-height: 200px;
+    max-height: 300px;
+    overflow: auto;
+    background-color: #fff;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+
+}
+/* div#message ul li{
+
+} */
+form#messages_form{
+    margin-top: 5px;
+    width: 100%;
+    height: 30px;
+    background-color: #fff;
+}
+
+input#messages_text{
+    width: 80%;
+    height:20px;
+    border: none;
+}
+
+input#messages_btn{
+    width: 18%;
+    border: none;
+    
+}
+
+
+
 /*=====================================
    footer
 ========================================= */
