--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,7 +69,8 @@ div.clear_fix{
 ========================================= */
 
 header{
-    height: 90px;
+    min-height: 90px;
+    height: auto;
     width: 100%;
     background-color: #fff;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
@@ -149,7 +150,8 @@ div#top_img {
     margin-top: 30px;
 }
 div#top_img img{
-    width: 1420px;
+    max-width: 1420px;
+    width: 100%;
     height: 300px;
 }
 /* item */
@@ -191,7 +193,7 @@ div.item_info{
 div.item_title_box{
     overflow: hidden;
     width: 130px;
-
+    float: left;
 }
 a.item_title{
     line-height: 60px;
@@ -201,6 +203,18 @@ a.item_title{
     padding: 15px 15px;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+div.item_like{
+    float: left;
+    width: 50px;
+    height: 100%;
+}
+div.item_like a i{
+    text-align:center;
+    margin:15px 0 0 10px;
+}
+i.like_btn_red{
+    color:rgba(255, 0, 0, 0.74);
 }
 /* search_items */
 h2#search_title{
