--- a/public/css/style.css
+++ b/public/css/style.css
@@ -600,6 +600,7 @@ div#messages{
     width: 500px;
     margin:  0 auto;
     margin-top: 50px;
+    margin-bottom: 300px;
 }
 div#message{
     min-height: 200px;
@@ -607,7 +608,14 @@ div#message{
     overflow: auto;
     background-color: #fff;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
-
+}
+div#message li p.message_send{
+    text-align:right;
+    margin-right: 10px;
+}
+div#message li p.message_recieve{
+    text-align: left;
+    margin-left: 10px;
 }
 /* div#message ul li{
 
